--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@
       <div
         class="flex items-center justify-center space-x-4 md:space-x-10 md:absolute top-12 right-10"
       >
-        <a href="#features" class="hover:text-accentCyan">Features</a>
-        <a href="#testimonials" class="hover:text-accentCyan">Testimonials</a>
+        <a href="#features" class="duration-200 hover:text-accentCyan"
+          >Features</a
+        >
+        <a href="#testimonials" class="duration-200 hover:text-accentCyan"
+          >Testimonials</a
+        >
         <!-- Light / Dark Mode Button -->
         <button
           id="theme-toggle"
@@ -75,5 +79,30 @@
         </button>
       </div>
     </header>
+    <!-- Hero Section -->
+    <section
+      id="hero"
+      class="bg-bottom bg-no-repeat bg-contain bg-curvy-light-mode dark:bg-curvy-dark-mode"
+    >
+      <!-- Hero Container -->
+      <div class="container px-6 mx-auto text-center md:pt-20 pb-52">
+        <img src="images/illustration-intro.png" alt="" class="mx-auto" />
+        <h1
+          class="max-w-2xl mx-auto mb-10 text-3xl font-bold leading-normal mt-14 md:text-4xl"
+        >
+          All your files in one secure location, assessible anywhere.
+        </h1>
+        <p class="max-w-sm mx-auto mb-10 text-sm md:max-w-xl md:text-lg">
+          Fylo stores all your most important files in one secure location.
+          Access them anywhere you need, share and collaborate with friends,
+          family & co-workers.
+        </p>
+        <button
+          class="p-3 transition-all duration-200 rounded-full bg-accentCyan w-52 hover:scale-95"
+        >
+          Get Started
+        </button>
+      </div>
+    </section>
   </body>
 </html>
