Add Features & Productive Section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script src="script.js" defer></script>
     <title>Fylo</title>
   </head>
-  <body class="antialiased dark:bg-darkBlue dark:text-white font-opensans">
+  <body class="antialiased font-opensans dark:bg-darkBlue dark:text-white">
     <!-- Header -->
     <header class="container h-40 px-6 mx-auto mt-10 text-center md:h-20">
       <!-- Dynamic Logo -->
@@ -102,6 +102,111 @@
         >
           Get Started
         </button>
+      </div>
+    </section>
+    <!-- Features Section -->
+    <section id="features" class="pt-12 bg-gray-50 dark:bg-darkBlue1">
+      <!-- Features Container -->
+      <div class="container px-6 pb-32 mx-auto">
+        <!-- First Row -->
+        <div
+          class="flex flex-col space-y-24 text-center md:flex-row md:space-y-0"
+        >
+          <!-- Item 1 -->
+          <div class="flex flex-col items-center space-y-2 md:w-1/2">
+            <div class="flex items-center justify-center h-24 mb-6">
+              <img src="images/icon-access-anywhere.svg" alt="" />
+            </div>
+            <h3 class="font-bold text-center">
+              Access your file from anywhere
+            </h3>
+            <p class="max-w-md">
+              The ability to use a smartphone, tablet, or computer to access
+              your amount means your files follow you everywhere.
+            </p>
+          </div>
+          <!-- Item 2 -->
+          <div class="flex flex-col items-center space-y-2 md:w-1/2">
+            <div class="flex items-center justify-center h-24 mb-6">
+              <img src="images/icon-security.svg" alt="" />
+            </div>
+            <h3 class="font-bold text-center">Security you can trust</h3>
+            <p class="max-w-md">
+              2-factor authentication and user-controlled encryption are just a
+              couple of the security features we allow to help secure your
+              files.
+            </p>
+          </div>
+        </div>
+        <!-- Second Row -->
+        <div
+          class="flex flex-col space-y-24 text-center md:flex-row md:space-y-0 mt-28"
+        >
+          <!-- Item 1 -->
+          <div class="flex flex-col items-center space-y-2 md:w-1/2">
+            <div class="flex items-center justify-center h-24 mb-6">
+              <img src="images/icon-collaboration.svg" alt="" />
+            </div>
+            <h3 class="font-bold text-center">
+              Access your file from anywhere
+            </h3>
+            <p class="max-w-md">
+              The ability to use a smartphone, tablet, or computer to access
+              your amount means your files follow you everywhere.
+            </p>
+          </div>
+          <!-- Item 2 -->
+          <div class="flex flex-col items-center space-y-2 md:w-1/2">
+            <div class="flex items-center justify-center h-24 mb-6">
+              <img src="images/icon-any-file.svg" alt="" />
+            </div>
+            <h3 class="font-bold text-center">Security you can trust</h3>
+            <p class="max-w-md">
+              2-factor authentication and user-controlled encryption are just a
+              couple of the security features we allow to help secure your
+              files.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Productive Section -->
+    <section id="productive" class="bg-white dark:bg-darkBlue">
+      <!-- Productive Container -->
+      <div
+        class="container flex flex-col items-center px-6 pt-24 pb-32 mx-auto md:flex-row md:space-x-16"
+      >
+        <!-- Image -->
+        <div class="md:w-1/2">
+          <img
+            src="images/illustration-stay-productive.png"
+            alt=""
+            class="mb-10"
+          />
+        </div>
+        <!-- Content -->
+        <div class="flex flex-col items-start md:w-1/2">
+          <div class="flex flex-col space-y-5">
+            <h5 class="max-w-md text-xl font-bold md:text-4xl">
+              Stay productive, wherever you are
+            </h5>
+            <p class="text-md md:text-lg">
+              Never let location be an issue when accessing your files. Fylo has
+              you covered for all of your file storage needs.
+            </p>
+            <p class="text-md md:text-lg">
+              Never let location be an issue when accessing your files. Fylo has
+              you covered for all of your file storage needs.
+            </p>
+          </div>
+          <!-- Link -->
+          <div class="block mt-4">
+            <a href="#" class="border-b border-accentCyan text-accentCyan">
+              See how Fylo works
+              <img src="/images/icon-arrow.svg" alt="" class="inline pb-1" />
+            </a>
+          </div>
+        </div>
       </div>
     </section>
   </body>
