--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
   </head>
   <body class="text-black font-opensans dark:bg-darkBlue dark:text-white">
     <!-- Header -->
-    <header class="container h-40 px-6 mx-auto mt-10 text-center md:h-20">
+    <header
+      class="container relative h-40 px-6 mx-auto mt-10 text-center md:h-20"
+    >
       <!-- Dynamic Logo -->
       <div
         class="w-48 h-20 mx-auto bg-no-repeat bg-logo-light-mode dark:bg-logo-dark-mode md:mx-0 md:absolute top-10 left-10"
